# music2video

./: .gitignore  README.md  main-gui.py  main.py  setup.cfg
src/music2video/: generator.py  megaprint.py  musicvideo.py
