[metadata]
name = music2video-megahaosguy
version = 0.0.1
author = Megahaosguy
author_email = megah4osguy@gmail.com
description = A python package and program that will generate a customizable still-image music video with your provided files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Megahaosguy/music2video
project_urls =
    Bug Tracker = https://github.com/Megahaosguy/music2video/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src